[gd_scene load_steps=7 format=3 uid="uid://ca1ghydbdless"]

[ext_resource type="Script" uid="uid://ekey8ygh6rux" path="res://cenas/win_screen.gd" id="1_5k65o"]
[ext_resource type="FontFile" uid="uid://5wbtgsib3sx8" path="res://assetsnew/font/perguntas.ttf" id="1_ofl3e"]
[ext_resource type="Texture2D" uid="uid://7dcqjx4cw2vr" path="res://assetsnew/step_1.png" id="3_60yrg"]
[ext_resource type="Texture2D" uid="uid://d2oxe2124f5an" path="res://assetsnew/Pixel SHMUP Free/Space Background/stars_1.png" id="4_sihf8"]
[ext_resource type="Texture2D" uid="uid://b4netxm2wk4t4" path="res://MathRun Files/astronaut-graphic-clipart-design-free-png.webp" id="5_ljx8f"]
[ext_resource type="AudioStream" uid="uid://mkym31sisc8k" path="res://MathRun Files/winfantasia-6912.mp3" id="6_sx2wx"]

[node name="Node" type="Node"]
script = ExtResource("1_5k65o")

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = 368.0
offset_top = 38.0
offset_right = 774.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("1_ofl3e")
theme_override_font_sizes/font_size = 80
text = "YOU WIN !"

[node name="Button" type="Button" parent="."]
z_index = 1
offset_left = 389.0
offset_top = 527.0
offset_right = 746.0
offset_bottom = 606.0
theme_override_fonts/font = ExtResource("1_ofl3e")
theme_override_font_sizes/font_size = 47
text = "RESTART"
flat = true

[node name="Label2" type="Label" parent="."]
z_index = 1
offset_left = 307.0
offset_top = 298.0
offset_right = 631.0
offset_bottom = 344.0
theme_override_fonts/font = ExtResource("1_ofl3e")
theme_override_font_sizes/font_size = 45
text = "FINAL SCORE"

[node name="labelScore" type="Label" parent="."]
z_index = 1
offset_left = 698.0
offset_top = 296.0
offset_right = 738.0
offset_bottom = 342.0
theme_override_fonts/font = ExtResource("1_ofl3e")
theme_override_font_sizes/font_size = 45
text = "x"

[node name="Step1" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(573.5, 325.5)
scale = Vector2(1.80469, 1.80833)
texture = ExtResource("3_60yrg")

[node name="Astronauta" type="Sprite2D" parent="Step1"]
position = Vector2(73, 551)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_ljx8f")

[node name="Stars1" type="Sprite2D" parent="."]
position = Vector2(754, 323)
scale = Vector2(2.94815, 1.32917)
texture = ExtResource("4_sihf8")

[node name="Stars2" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(299, 324.25)
scale = Vector2(2.21481, 1.33021)
texture = ExtResource("4_sihf8")

[node name="Astronauta" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(106, 530)
scale = Vector2(0.245686, 0.230612)
texture = ExtResource("5_ljx8f")

[node name="winTheme" type="AudioStreamPlayer2D" parent="."]
position = Vector2(389, 527)
stream = ExtResource("6_sx2wx")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
